--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Copa America 2021</title>
+    <title>Footbal</title>
     <!-- font-awesome -->
     <script src="https://kit.fontawesome.com/129346ad25.js" crossorigin="anonymous"></script>
     <!-- style-sheet -->
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-    <!------- top banner start------- -->
+    <!--------
+    top banner start
+    ---------->
     <section class="top-banner flexible-container">
         <div class="top-side">
             <p>Conmebol
@@ -22,17 +24,19 @@
                 <br>
                 2021
             </p>
-            <a class="live-button" target="_blank" href="https://www.youtube.com/">Watch Live <i
+            <a class="live-button" target="_blank" href="https://www.youtube.com/">Watch Live<i
                     class="fas fa-arrow-right"></i></a>
-
-
         </div>
         <div class="pack">
             <img src="./images/banner.png" alt="">
         </div>
     </section>
-    <!-- --------top banner finish-------- -->
-    <!-----------player images start------ -->
+    <!----------
+    top banner finish
+    ------------>
+    <!-----------
+    player images start
+    ------------->
     <section class="all-player">
         <div class="flexible">
             <div class="half-width individual">
@@ -139,14 +143,12 @@
             allowfullscreen></iframe>
 
     </div>
-
-
-
-
-
-
-    <!-----------player images finish------ -->
-    <!---------- Footer Font awesome start------>
+    <!----------
+    player images finish
+    ------------>
+    <!------------------
+    Footer Font awesome start
+    -------------------->
     <div>
         <div class="image-edit">
             <img src="./images/Logo.png" alt="">
@@ -160,7 +162,9 @@
         <br>
         <footer id="color">Copyright <i class="far fa-copyright"></i> 2022 Football</footer>
     </div>
-    <!----------Footer Font awesome finish------>
+    <!----------
+    Footer Font awesome finish
+    ------------>
 
 </body>
 
